Added Java 11 Compatibility CoreModManager
Added Java 11 detection and compatibility to CoreModManager
Added injecting into the classpath to force coremods to load correctly.
Added incorrect JVM arguments with associated error.
Kept old method of loading in Java 8 for backwards compatibility.